public/css/custom.css
/* Custom CSS to supplement or override the template */

body {
  background-color: #E5E5E5;
}

/* Cover background image */
body:after {
  content:"";
  position:fixed;
  top:0;
  height:100vh;
  left:0;
  right:0;
  z-index:-1;
  background: linear-gradient(
      rgba(255, 255, 255, 0.75),
      rgba(255, 255, 255, 0.75)
    ), url(../img/coffee.jpg) center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

/* Navbar */
.navbar .navbar-nav {
  /* display: inline-block; */
  float: none;
  vertical-align: top;
  text-align: center;
}

.navbar .navbar-collapse {
  text-align: center;
}

/* .navbar-light {
  background-color: transparent;
  border-bottom: 0px;
} */

/* Sticky navbar */
.sticky.is-sticky {
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  z-index: 1000;
  width: 100%;
}

/* @media (min-width: 992px) { */
  nav.sticky.is-sticky {
    background-color: rgba(255, 255, 255, 0.75) !important;
    border-bottom: 1px solid rgba(0, 0, 0, 0.2) !important;
  }

  a.nav-link {
    /* color:black; */
  }
/* } */
/* @media (max-width: 991px) {
  nav.sticky.is-sticky {
    background-color: transparent;
  }
  div.navbar-collapse.collapse.show {
    background-color: rgba(255, 255, 255, 0.75) !important;
  }
  div.navbar-collapse.collapsing {
    background-color: rgba(255, 255, 255, 0.75) !important;
  }
} */


/* Caligraphy vectors */
#caligraphy-desktop {
  /* margin-top: 0%; */
  width: 100%;
  height: auto;
}

#caligraphy-mobile {
  margin-top: 20%;
  width: 100%;
  height: auto;
}

section h2 {
  margin-bottom: 50px; /* TODO: Play with this a bit once caligraphy is added */
}

/* Display either the desktop or mobile version of the caligraphy */
@media (min-width: 992px) {
  #caligraphy-mobile {
    display: none;
  }
  #caligraphy-desktop {
    display: block;
  }
}
@media (max-width: 991px) {
  #caligraphy-mobile {
    display: block;
  }
  #caligraphy-desktop {
    display: none;
  }
}

/* RSVP Embedded */
#rsvp-embed {
  padding-top: 5px;
  height: 100%;
}

@media (max-width: 991px) {
  .caligraphy-wrapper {
    margin-bottom: 15px;
  }
}

